# sqlmodel_crud

./: pyproject.toml
sqlmodel_crud/: main.py  test_main.py
